--- a/style/style.scss
+++ b/style/style.scss
@@ -4,6 +4,7 @@
 @import '_header.scss';
 @import '_bx.scss';
 @import '_about.scss';
-
+@import '_services.scss';
+@import '_recentWorks.scss';
 
 /* @import '_nav_mobile.scss'; */
