--- a/style/_about.scss
+++ b/style/_about.scss
@@ -10,7 +10,7 @@
 		flex-direction: column;
 		justify-content: space-around;
 		padding: 0 25px;
-		margin-top: 50px;
+		padding-top: 50px;
 
 		@include desktop{
 			flex-direction: row;
