--- a/style/_base.scss
+++ b/style/_base.scss
@@ -2,6 +2,7 @@ body{
 	background-color:#fff;
 	overflow-x:hidden;
 	position: relative;
+	scroll-behavior: smooth;
 
 	/* @include desktop{
 		width: 1024px;
