--- a/style/_header.scss
+++ b/style/_header.scss
@@ -19,7 +19,7 @@
 		right: 0;
 		z-index: 10;
 		opacity: 0;
-		transition: 1s ease;
+		
 
 		@include desktop{
 			visibility: visible;
@@ -33,6 +33,8 @@
 
 		.nav__list{
 			padding-top: 80px;
+
+
 
 			@include desktop{
 				display: flex;
@@ -49,6 +51,7 @@
 			color: #000;
 
 		@include desktop{
+			display: inline-block;
 			color: #fff;
 			border-top: none;
 			padding: 10px 0 10px 0 ;
@@ -56,7 +59,7 @@
 
 			&:hover{
 				border-bottom:1px solid #ff3d00;
-				padding-bottom: 20px;
+				padding-bottom: 9px;
 				color: #ff3d00;
 			}
 
@@ -71,7 +74,21 @@
 					border-bottom: none;
 				}
 			}
+		}
+
+		.nav__active-desktop{
+
+			@include desktop{
+				flex-direction: column;
+				position: fixed;
+				background-color:#252525;
+				padding: 25px 25px 40px 25px;
+			}
 		}	
+	}
+
+	.header__nav--active{
+		right: 0;
 	}
 
 		.nav__cover{
@@ -83,7 +100,7 @@
 			z-index: 10;
 			visibility: hidden;
 			opacity: 0;
-			transition: 1s ease;
+			
 		}
 
 		.nav__active{
@@ -342,11 +359,13 @@
 		background-color: #fff;
 		height: 62px;
 		position: absolute;
-		width: 101%;
+		width: 104%;
 		bottom: -2px;
+		left: -10px;
 
 		@include desktop{
 			height: 82px;
+			width: 101%;
 		}					
 
 	}
