--- a/style/style.css
+++ b/style/style.css
@@ -41,37 +41,24 @@ body {
   background-color: #fff;
   overflow-x: hidden;
   position: relative;
+  scroll-behavior: smooth;
   /* @include desktop{
-		width: 1024px;
-		margin: 0 auto;
-	} */ }
+  	width: 1024px;
+  	margin: 0 auto;
+  } */ }
 
 html {
   font-size: 16px;
   font-family: 'Lato', sans-serif; }
 
 /*resize*/
-@-webkit-keyframes anchor {
-  0% {
-    -webkit-transform: translateY(-50px);
-    transform: translateY(-50px); }
-  50% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0); }
-  100% {
-    -webkit-transform: translateY(50px);
-    transform: translateY(50px); } }
 @keyframes anchor {
   0% {
-    -webkit-transform: translateY(-50px);
     transform: translateY(-50px); }
   50% {
-    -webkit-transform: translateY(0);
     transform: translateY(0); }
   100% {
-    -webkit-transform: translateY(50px);
     transform: translateY(50px); } }
-
 .header {
   position: relative; }
   @media (min-width: 1024px) {
@@ -89,10 +76,7 @@ html {
       height: 100vh;
       right: 0;
       z-index: 10;
-      opacity: 0;
-      -webkit-transition: 1s ease;
-      -o-transition: 1s ease;
-      transition: 1s ease; }
+      opacity: 0; }
       @media (min-width: 1024px) {
         .header .header__container .header__nav {
           visibility: visible;
@@ -105,12 +89,7 @@ html {
         padding-top: 80px; }
         @media (min-width: 1024px) {
           .header .header__container .header__nav .nav__list {
-            display: -webkit-box;
-            display: -ms-flexbox;
             display: flex;
-            -webkit-box-orient: horizontal;
-            -webkit-box-direction: normal;
-            -ms-flex-direction: row;
             flex-direction: row;
             padding-top: 30px; } }
         .header .header__container .header__nav .nav__list .nav__list--links {
@@ -122,19 +101,28 @@ html {
           color: #000; }
           @media (min-width: 1024px) {
             .header .header__container .header__nav .nav__list .nav__list--links {
+              display: inline-block;
               color: #fff;
               border-top: none;
               padding: 10px 0 10px 0;
               margin-right: 12px; }
               .header .header__container .header__nav .nav__list .nav__list--links:hover {
                 border-bottom: 1px solid #ff3d00;
-                padding-bottom: 20px;
+                padding-bottom: 9px;
                 color: #ff3d00; } }
         .header .header__container .header__nav .nav__list .nav__list--lastchild {
           border-bottom: 1px solid #f1d7d7; }
           @media (min-width: 1024px) {
             .header .header__container .header__nav .nav__list .nav__list--lastchild {
               border-bottom: none; } }
+      @media (min-width: 1024px) {
+        .header .header__container .header__nav .nav__active-desktop {
+          flex-direction: column;
+          position: fixed;
+          background-color: #252525;
+          padding: 25px 25px 40px 25px; } }
+    .header .header__container .header__nav--active {
+      right: 0; }
     .header .header__container .nav__cover {
       width: 20%;
       position: absolute;
@@ -143,10 +131,7 @@ html {
       background-color: #000;
       z-index: 10;
       visibility: hidden;
-      opacity: 0;
-      -webkit-transition: 1s ease;
-      -o-transition: 1s ease;
-      transition: 1s ease; }
+      opacity: 0; }
     .header .header__container .nav__active {
       visibility: visible;
       position: fixed;
@@ -174,11 +159,7 @@ html {
       width: 40px;
       height: 35px;
       border-top: 5px solid #fff;
-      -webkit-transition: 0.2s -webkit-transform linear;
-      transition: 0.2s -webkit-transform linear;
-      -o-transition: 0.2s transform linear;
       transition: 0.2s transform linear;
-      transition: 0.2s transform linear, 0.2s -webkit-transform linear;
       background-color: transparent;
       border-right: 0px;
       border-left: 0px;
@@ -191,28 +172,16 @@ html {
       left: 0;
       width: 100%;
       border-top: 5px solid #fff;
-      -webkit-transform: translateY(10px);
-      -ms-transform: translateY(10px);
       transform: translateY(10px);
       outline: none; }
     .header .button__container .button::after {
-      -webkit-transform: translateY(25px);
-      -ms-transform: translateY(25px);
       transform: translateY(25px);
-      -webkit-transition: 0.2s -webkit-transform linear;
-      transition: 0.2s -webkit-transform linear;
-      -o-transition: 0.2s transform linear;
-      transition: 0.2s transform linear;
-      transition: 0.2s transform linear, 0.2s -webkit-transform linear; }
+      transition: 0.2s transform linear; }
     .header .button__container .button-active {
-      -webkit-transform: rotate(45deg) translateY(5px);
-      -ms-transform: rotate(45deg) translateY(5px);
       transform: rotate(45deg) translateY(5px);
       border: none;
       outline: none; }
     .header .button__container .button.button-after:after {
-      -webkit-transform: rotate(-90deg) translateX(-10px);
-      -ms-transform: rotate(-90deg) translateX(-10px);
       transform: rotate(-90deg) translateX(-10px);
       border-top: 5px solid #000; }
     .header .button__container .button.button-before:before {
@@ -228,8 +197,6 @@ html {
     z-index: 9;
     top: 30px;
     left: 50%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
     transform: translateX(-50%); }
     .header .header__logo .header__logo--link {
       display: block;
@@ -251,8 +218,6 @@ html {
           z-index: 1;
           top: 120px;
           left: 50%;
-          -webkit-transform: translateX(-50%);
-          -ms-transform: translateX(-50%);
           transform: translateX(-50%);
           text-align: center;
           color: #fff;
@@ -301,20 +266,14 @@ html {
                 color: #cbc6c0; } }
           @media (min-width: 1024px) {
             .header .header__carousel .header__carousel--container .slider .slider__content .slider__container {
-              display: -webkit-box;
-              display: -ms-flexbox;
               display: flex;
-              -webkit-box-orient: horizontal;
-              -webkit-box-direction: normal;
-              -ms-flex-direction: row;
               flex-direction: row; } }
   @media (min-width: 1024px) and (min-width: 1024px) {
     .header .header__carousel .header__carousel--container .slider .slider__content .slider__container {
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
       justify-content: center;
       width: 460px;
       margin: 0 auto; } }
+
           .header .header__carousel .header__carousel--container .slider .slider__content .slider__container .slider__container-link {
             display: block;
             width: 200px;
@@ -358,11 +317,13 @@ html {
       background-color: #fff;
       height: 62px;
       position: absolute;
-      width: 101%;
-      bottom: -2px; }
+      width: 104%;
+      bottom: -2px;
+      left: -10px; }
       @media (min-width: 1024px) {
         .header .header__carousel .header__cover--img {
-          height: 82px; } }
+          height: 82px;
+          width: 101%; } }
   .header .header__anchor {
     position: relative; }
     .header .header__anchor .anchor {
@@ -371,13 +332,10 @@ html {
       height: 60px;
       bottom: 0;
       left: 50%;
-      -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
       transform: translateX(-50%);
       z-index: 4;
       background: #e5e5e5;
       border-radius: 100%;
-      -webkit-box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.29);
       box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.29);
       overflow: hidden; }
       .header .header__anchor .anchor .anchor__img {
@@ -386,7 +344,6 @@ html {
         width: 22px;
         height: 31px;
         padding-top: 10px;
-        -webkit-animation: anchor 1.6s infinite linear;
         animation: anchor 1.6s infinite linear; }
 
 /** VARIABLES
@@ -594,36 +551,19 @@ ul.bxslider {
   .about {
     max-width: 1076px;
     margin: 0 auto; } }
-
 .about .about__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -ms-flex-pack: distribute;
   justify-content: space-around;
   padding: 0 25px;
-  margin-top: 50px; }
+  padding-top: 50px; }
   @media (min-width: 1024px) {
     .about .about__container {
-      -webkit-box-orient: horizontal;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: row;
       flex-direction: row;
       padding-bottom: 50px; } }
   .about .about__container .about__container--row {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
     text-align: center; }
     @media (min-width: 1024px) {
@@ -641,8 +581,6 @@ ul.bxslider {
         height: 80px;
         border: 1px solid #e8e3e3;
         border-radius: 2px;
-        -webkit-transition: 1s  ease;
-        -o-transition: 1s  ease;
         transition: 1s  ease; }
         @media (min-width: 1024px) {
           .about .about__container .about__container--row .about__border--img::before {
@@ -654,11 +592,7 @@ ul.bxslider {
           height: 60px; }
           .about .about__container .about__container--row .about__border--img:hover::before {
             border: 1px solid #e74c3c;
-            -webkit-transform: rotateZ(-45deg);
-            -ms-transform: rotate(-45deg);
             transform: rotateZ(-45deg);
-            -webkit-transition: 1s  ease;
-            -o-transition: 1s  ease;
             transition: 1s  ease; }
           .about .about__container .about__container--row .about__border--img:hover + .about__hover--title3 {
             color: #e74c3c; } }
@@ -666,8 +600,6 @@ ul.bxslider {
         position: absolute;
         display: block;
         left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
         top: 50%;
         z-index: 9; }
@@ -713,4 +645,241 @@ ul.bxslider {
         .about .about__container .about__container--row .about__container--text {
           font-size: .7rem; } }
 
+.services .services__container {
+  background-color: #000; }
+  @media (min-width: 1024px) {
+    .services .services__container {
+      max-width: 1076px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: row; } }
+  .services .services__container .services__content {
+    width: 100%;
+    padding-top: 50px; }
+    @media (min-width: 1024px) {
+      .services .services__container .services__content {
+        width: 50%; } }
+    .services .services__container .services__content .services__conetent--head {
+      font-size: 2rem;
+      text-align: right;
+      padding: 0px 40px;
+      border-right: 6px solid #e74c3c;
+      padding-right: 5%;
+      margin-bottom: 50px;
+      margin-right: 40px;
+      margin-top: 40px;
+      color: #fff; }
+      @media (min-width: 1024px) {
+        .services .services__container .services__content .services__conetent--head {
+          margin-right: 0; } }
+    .services .services__container .services__content .services__content--collumn {
+      margin-bottom: 40px;
+      position: relative;
+      margin-right: 50px; }
+      @media (min-width: 1024px) {
+        .services .services__container .services__content .services__content--collumn {
+          margin-right: 0;
+          padding: 0;
+          padding-right: 100px; } }
+      .services .services__container .services__content .services__content--collumn .content__left--head {
+        text-align: left;
+        margin-left: 50px; }
+        @media (min-width: 1024px) {
+          .services .services__container .services__content .services__content--collumn .content__left--head {
+            text-align: right; } }
+      .services .services__container .services__content .services__content--collumn .content-left--text {
+        text-align: left;
+        padding-left: 40px; }
+        @media (min-width: 1024px) {
+          .services .services__container .services__content .services__content--collumn .content-left--text {
+            text-align: right; } }
+      .services .services__container .services__content .services__content--collumn .content-left--icon {
+        left: 40px; }
+        @media (min-width: 1024px) {
+          .services .services__container .services__content .services__content--collumn .content-left--icon {
+            text-align: right; } }
+      .services .services__container .services__content .services__content--collumn h3 {
+        font-size: 1.5rem;
+        text-transform: uppercase;
+        text-align: right;
+        padding-bottom: 60px;
+        color: #e74c3c; }
+        @media (min-width: 1024px) {
+          .services .services__container .services__content .services__content--collumn h3 {
+            padding-bottom: 30px; } }
+      .services .services__container .services__content .services__content--collumn p {
+        text-align: right;
+        padding-bottom: 30px;
+        line-height: 2rem;
+        color: #fff;
+        padding-left: 40px;
+        font-size: 1.1rem; }
+        @media (min-width: 1024px) {
+          .services .services__container .services__content .services__content--collumn p {
+            padding-left: 0px; } }
+      .services .services__container .services__content .services__content--collumn .services__icon {
+        position: absolute;
+        right: 0px;
+        top: 35px; }
+        @media (min-width: 1024px) {
+          .services .services__container .services__content .services__content--collumn .services__icon {
+            right: -100px;
+            right: 0px;
+            top: 0; } }
+        .services .services__container .services__content .services__content--collumn .services__icon i {
+          background: #f4f5f9;
+          width: 40px;
+          height: 40px;
+          line-height: 45px;
+          text-align: center;
+          color: #e74c3c;
+          position: relative;
+          z-index: 9;
+          border: 5px solid rgba(0, 0, 0, 0.2);
+          border-radius: 50%;
+          font-size: 1.875rem; }
+          @media (min-width: 1024px) {
+            .services .services__container .services__content .services__content--collumn .services__icon i {
+              width: 70px;
+              height: 70px;
+              line-height: 70px; } }
+  .services .services__container .services__img {
+    width: 100%; }
+    @media (min-width: 1024px) {
+      .services .services__container .services__img {
+        width: 50%;
+        margin: auto; } }
+    .services .services__container .services__img .services__img--figure {
+      height: 367px; }
+      @media (min-width: 1024px) {
+        .services .services__container .services__img .services__img--figure {
+          height: 676px; } }
+      .services .services__container .services__img .services__img--figure img {
+        width: 100%;
+        height: 100%;
+        float: right; }
+        @media (min-width: 1024px) {
+          .services .services__container .services__img .services__img--figure img {
+            width: 90%; } }
+
+@media (min-width: 1024px) {
+  .recentWorks {
+    width: 1076px;
+    margin: 0 auto; } }
+.recentWorks .recentWorks__text {
+  padding: 50px 25px 50px 25px; }
+  .recentWorks .recentWorks__text h2 {
+    font-size: 2rem;
+    text-align: center;
+    padding-bottom: 30px;
+    text-transform: uppercase; }
+  .recentWorks .recentWorks__text p {
+    font-size: .9rem;
+    text-align: center; }
+  .recentWorks .recentWorks__text .separator {
+    width: 10px;
+    height: 10px;
+    margin: 20px auto;
+    background: #e74c3c;
+    position: relative;
+    display: block;
+    border-radius: 50%; }
+  .recentWorks .recentWorks__text .separator:before {
+    position: absolute;
+    right: 5%;
+    bottom: 4px;
+    height: 1px;
+    width: 80px;
+    background: #eee;
+    content: "";
+    display: inline-block;
+    margin-right: 20px; }
+  .recentWorks .recentWorks__text .separator:after {
+    position: absolute;
+    left: 5%;
+    bottom: 4px;
+    height: 1px;
+    width: 80px;
+    background: #eee;
+    content: "";
+    display: inline-block;
+    margin-left: 20px; }
+.recentWorks .recentWorks__container ul {
+  padding: 0px 25px 50px 25px;
+  text-align: center; }
+  .recentWorks .recentWorks__container ul li {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 0.9rem;
+    text-align: center;
+    text-transform: uppercase;
+    cursor: pointer;
+    border: 2px solid grey;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    margin-right: 5px;
+    color: grey;
+    font-weight: bolder;
+    box-sizing: border-box; }
+  .recentWorks .recentWorks__container ul li:hover {
+    border-color: black;
+    color: black; }
+  .recentWorks .recentWorks__container ul .hov {
+    border-color: black;
+    color: black; }
+.recentWorks .recentWorks__container .recentWorks__container--portfolio {
+  width: 100%;
+  height: 400px;
+  padding-bottom: 50px; }
+  @media (min-width: 1024px) {
+    .recentWorks .recentWorks__container .recentWorks__container--portfolio {
+      height: 600px;
+      width: 1076px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap; } }
+  .recentWorks .recentWorks__container .recentWorks__container--portfolio .recentWorks__img--figure {
+    position: relative;
+    transition: all 0.4s ease-in-out;
+    height: 400px; }
+    @media (min-width: 1024px) {
+      .recentWorks .recentWorks__container .recentWorks__container--portfolio .recentWorks__img--figure {
+        width: 33.333%;
+        height: 350px; } }
+    .recentWorks .recentWorks__container .recentWorks__container--portfolio .recentWorks__img--figure img {
+      height: 100%;
+      width: 100%; }
+      @media (min-width: 1024px) {
+        .recentWorks .recentWorks__container .recentWorks__container--portfolio .recentWorks__img--figure img {
+          height: 100%;
+          width: 100%; } }
+  .recentWorks .recentWorks__container .recentWorks__container--portfolio .recentWorks__container--overlay {
+    width: 80%;
+    height: 80%;
+    position: absolute;
+    opacity: 0;
+    background-color: rgba(231, 76, 60, 0.6);
+    left: 10%;
+    top: 10%;
+    transition: 0.9s; }
+    .recentWorks .recentWorks__container .recentWorks__container--portfolio .recentWorks__container--overlay h3 {
+      padding: 150px 0px 10px 40px;
+      font-size: 1.5rem;
+      color: #fff; }
+    .recentWorks .recentWorks__container .recentWorks__container--portfolio .recentWorks__container--overlay p {
+      padding-left: 40px;
+      font-size: 1.1rem;
+      color: #fff; }
+.recentWorks .recentWorks__container .recentWorks__img--figure:hover .recentWorks__container--overlay {
+  opacity: 1;
+  transform: scale(1.1); }
+.recentWorks .recentWorks__container .hiden {
+  transform: scale(0);
+  width: 0;
+  padding: 0;
+  transition: all 0.4s ease-in-out;
+  display: none; }
+
 /* @import '_nav_mobile.scss'; */
+
+/*# sourceMappingURL=style.css.map */
