--- a/style/_recentWorks.scss
+++ b/style/_recentWorks.scss
@@ -15,7 +15,7 @@
 		}
 
 		p{
-			font-size: .9rem;
+			
 			text-align: center;
 		}
 
@@ -94,11 +94,11 @@
 
 		.recentWorks__container--portfolio {
 			width: 100%;
-			height: 400px;
+			height: auto;
 			padding-bottom: 50px;
 
 			@include desktop{
-				height: 600px;
+				height: auto;
 				width: 1076px;
 				display: flex;
 				flex-direction: row;
@@ -109,7 +109,13 @@
 			.recentWorks__img--figure{
 				position: relative;
 				transition: all 0.4s ease-in-out;
-				height: 400px;
+				
+
+				@include tablet{
+					height: 500px;
+					width:70%;
+					margin: 0 auto;
+				}
 				
 				@include desktop{
 					width: 33.333%;
