--- a/style/style.scss
+++ b/style/style.scss
@@ -6,5 +6,7 @@
 @import '_about.scss';
 @import '_services.scss';
 @import '_recentWorks.scss';
+@import '_form.scss';
+@import '_footer.scss';
 
 /* @import '_nav_mobile.scss'; */
